Добавив зображення в розмітку

--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,8 @@ body {
 
 .codes-list {
   display: flex;
+  flex-wrap: wrap;
+  gap: 22px;
   align-content: space-between;
 }
 .codes-list__item {
@@ -231,9 +233,6 @@ body {
   background-color: var(--white-color);
   border: 1px solid var(--grey-color);
   border-radius: 5px;
-}
-.codes-list__item:not(:last-child) {
-  margin-right: 22px;
 }
 .codes-list__img-thumbs {
   margin-bottom: 10px;
