--- a/src/partials/container/container-c-b.html
+++ b/src/partials/container/container-c-b.html
@@ -2,69 +2,6 @@
 <main class="main">
   <div class="main__container container">
     <h2 class="title">Кодекси в книгах (без підтримки в контрольному стані)</h2>
-    <ul class="codes-list list-no-marker">
-      <li class="codes-list__item">
-        <a class="codes-list__link link-no-decor" href="">
-          <img
-            class="codes-list__img-thumbs img-thumbs"
-            src="./images/codes/book/thumbs-sc.jpg"
-            alt="Сімейний кодекс України"
-          />
-          <h3 class="codes-list__name">Сімейний кодекс України</h3>
-          <p class="codes-list__part"></p>
-        </a>
-        <div class="codes-list__order">
-          <p class="codes-list__prise">300.00 грн.</p>
-          <button class="codes-list__button btn" type="button">Замовити</button>
-        </div>
-      </li>
-      <li class="codes-list__item">
-        <a class="codes-list__link link-no-decor" href="">
-          <img
-            class="codes-list__img-thumbs img-thumbs"
-            src="./images/codes/book/thumbs-cc-1-4.jpg"
-            alt="Цивільний кодекс України книги 1-4"
-          />
-          <h3 class="codes-list__name">Цивільний кодекс України</h3>
-          <p class="codes-list__part">(книги 1-4)</p>
-        </a>
-        <div class="codes-list__order">
-          <p class="codes-list__prise">300.00 грн.</p>
-          <button class="codes-list__button btn" type="button">Замовити</button>
-        </div>
-      </li>
-      <li class="codes-list__item">
-        <a class="codes-list__link link-no-decor" href="">
-          <img
-            class="codes-list__img-thumbs img-thumbs"
-            src="./images/codes/book/thumbs-cc-5-6.jpg"
-            alt="Цивільний кодекс України книги 5-6"
-          />
-          <h3 class="codes-list__name">Цивільний кодекс України</h3>
-          <p class="codes-list__part">(книги 5-6)</p>
-        </a>
-        <div class="codes-list__order">
-          <p class="codes-list__prise">300.00 грн.</p>
-          <button class="codes-list__button btn" type="button">Замовити</button>
-        </div>
-      </li>
-      <li class="codes-list__item">
-        <a class="codes-list__link link-no-decor" href="">
-          <img
-            class="codes-list__img-thumbs img-thumbs"
-            src="./images/codes/book/thumbs-casu.jpg"
-            alt="Кодекс адміністративного судочинства України"
-          />
-          <h3 class="codes-list__name">
-            Кодекс адміністративного судочинства України
-          </h3>
-          <p class="codes-list__part"></p>
-        </a>
-        <div class="codes-list__order">
-          <p class="codes-list__prise">300.00 грн.</p>
-          <button class="codes-list__button btn" type="button">Замовити</button>
-        </div>
-      </li>
-    </ul>
+    <ul class="codes-list list-no-marker"></ul>
   </div>
 </main>
