--- a/src/partials/container/container-c-b.html
+++ b/src/partials/container/container-c-b.html
@@ -1,6 +1,7 @@
 <!-- main -->
 <main class="main">
   <div class="main__container container">
+    <img src="./images/codes/book/thumbs-casu.jpg" alt="" width="192" />
     <h2 class="title">Кодекси в книгах (без підтримки в контрольному стані)</h2>
     <ul class="codes-list list-no-marker"></ul>
   </div>
